--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap"
       rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/the-wild-breath-of-zelda"
+      rel="stylesheet" />
+
     <!--Titre-->
     <title>The Legend of Zelda : Tears of the Kingdom</title>
 
@@ -31,25 +37,25 @@
         <nav>
           <ul class="navbar__list">
             <li>
-              <a class="nav__list--link" href="#">
-                <img class="nav__list--img" src="image/nav1.png" alt="" />
-                Menu 1
+              <a class="nav__list" href="#"
+                ><img class="nav__list--img" src="image/nav1.png" alt="" /> Menu
+                1
               </a>
             </li>
             <li>
-              <a class="nav__list--link" href="#">
-                <img class="nav__list--img" src="image/nav2.png" alt="" />
-                Menu 2
+              <a class="nav__list" href="#">
+                <img class="nav__list--img" src="image/nav2.png" alt="" /> Menu
+                2
               </a>
             </li>
             <li>
-              <a class="nav__list--link" href="#">
+              <a class="nav__list" href="#">
                 <img class="nav__list--img" src="image/nav3.png" alt="" />
                 Menu 3
               </a>
             </li>
             <li>
-              <a class="nav__list--link" href="#">
+              <a class="nav__list" href="#">
                 <img class="nav__list--img" src="image/nav4.png" alt="" />
                 Menu 4
               </a>
@@ -65,7 +71,6 @@
         <div>
           <img src="image/hero.png" alt="hero Zelda" />
         </div>
-       
       </section>
 
       <!--Newsletter-->
@@ -88,25 +93,31 @@
               name="mail"
               id="mailing__list--mail"
               placeholder="link@hyrule.totk" />
-            <button class="form__btn" type="submit">Je plonge !</button>
+              <button class="button__deco" type="submit"
+            href="https://www.zeldadungeon.net/tears-of-the-kingdom-interactive-map/">
+            <div class="button__text">J'y plonge !</div>
+            <div class="left-decoration"></div>
+	<div class="right-decoration"></div>
+              </button>
           </div>
         </form>
       </section>
 
       <!--Carte interactive-->
       <section id="carteinteractive">
-        <div>Tu es perdu ?</div>
         <div>
-          <a
+          <h2>Tu es perdu ?</h2>
+          <a class="button__deco"
             href="https://www.zeldadungeon.net/tears-of-the-kingdom-interactive-map/">
-            <button>Carte interactive</button>
+            <div class="button__text">Carte interactive</div>
+            <div class="left-decoration"></div>
+	<div class="right-decoration"></div>
           </a>
         </div>
       </section>
 
       <!--Personnage-->
       <section id="personnage">
-       
         <div class="card__box">
           <!--Link-->
           <div class="card">
@@ -323,13 +334,13 @@
                 foudre, seule arme efficace contre ces créatures. Lorsqu'elle
                 retrouve Link, elle le rejoint pour repousser les attaques des
                 Gibdos contre le Basar Assek et la Cité Gerudo, mettant en place
-                des stratégies audacieuses pour défendre son peuple. Grâce à leur
-                coopération, ils détruisent les nids des Gibdos et affrontent la
-                Reine Gibdo, révélant ainsi le lien entre la brume et cette
-                entité maléfique. Riju, guidée par l'héritage de son peuple,
-                accepte son destin en tant que Sage de la Foudre et s'allie à
-                Link pour vaincre les ténèbres qui menacent une fois de plus
-                Hyrule.
+                des stratégies audacieuses pour défendre son peuple. Grâce à
+                leur coopération, ils détruisent les nids des Gibdos et
+                affrontent la Reine Gibdo, révélant ainsi le lien entre la brume
+                et cette entité maléfique. Riju, guidée par l'héritage de son
+                peuple, accepte son destin en tant que Sage de la Foudre et
+                s'allie à Link pour vaincre les ténèbres qui menacent une fois
+                de plus Hyrule.
               </p>
             </div>
           </div>
