--- a/index.html
+++ b/index.html
@@ -93,12 +93,11 @@
               name="mail"
               id="mailing__list--mail"
               placeholder="link@hyrule.totk" />
-              <button class="button__deco" type="submit"
-            href="https://www.zeldadungeon.net/tears-of-the-kingdom-interactive-map/">
-            <div class="button__text">J'y plonge !</div>
-            <div class="left-decoration"></div>
-	<div class="right-decoration"></div>
-              </button>
+            <button class="button__deco" type="submit">
+              <div class="button__text">J'y plonge !</div>
+              <div class="left-decoration"></div>
+              <div class="right-decoration"></div>
+            </button>
           </div>
         </form>
       </section>
@@ -106,12 +105,14 @@
       <!--Carte interactive-->
       <section id="carteinteractive">
         <div>
-          <h2>Tu es perdu ?</h2>
-          <a class="button__deco"
-            href="https://www.zeldadungeon.net/tears-of-the-kingdom-interactive-map/">
+          <h3>Tes perdu ?</h3>
+          <a
+            class="button__deco"
+            href="https://www.zeldadungeon.net/tears-of-the-kingdom-interactive-map/"
+            target="_blank">
             <div class="button__text">Carte interactive</div>
             <div class="left-decoration"></div>
-	<div class="right-decoration"></div>
+            <div class="right-decoration"></div>
           </a>
         </div>
       </section>
@@ -171,7 +172,7 @@
             </div>
 
             <div class="card__body">
-              <span class="titre">Roi démon</span>
+              <span class="titre">Roi demon</span>
               <h2>Ganondorf</h2>
               <p>
                 Ganondorf incarne le mal absolu et représente la plus grande
@@ -357,12 +358,12 @@
 
           <!--Grid 2-->
           <div class="img2">
-            <img src="image/grid2.png" alt="screenshot2" />
+            <img src="image/grid3.png" alt="screenshot2" />
           </div>
 
           <!--Grid 3-->
           <div class="img3">
-            <img src="image/grid3.png" alt="screenshot3" />
+            <img src="image/grid2.png" alt="screenshot3" />
           </div>
 
           <!--Grid 4-->
@@ -384,14 +385,16 @@
 
       <!--Statistique-->
       <section id="statistique">
-        <div class="container">
-          <div><img src="image/triforce_graph.png" alt="triforce" /></div>
+        <div class="statistique__container">
+          <div class="statistique__graph">
+            <img src="image/triforce_graph.png" alt="triforce" />
+            <h2>Qu'est-ce qui fait la Triforce ?!</h2>
+          </div>
           <div>
-            <h2>Qu'est-ce qui fait La Triforce !</h2>
-            <ul>
-              <li><img src="image/gold_square.png" alt="" />pouvoir</li>
-              <li><img src="image/darkblue_square.png" alt="" /> courage</li>
-              <li><img src="image/lightblue_square.png" alt="" />sagesse</li>
+            <ul class="statistique__list">
+              <li><img src="image/gold_square.png" alt="" />Pouvoir</li>
+              <li><img src="image/darkblue_square.png" alt="" />Courage</li>
+              <li><img src="image/lightblue_square.png" alt="" />Sagesse</li>
             </ul>
           </div>
         </div>
@@ -399,3 +402,175 @@
     </main>
   </body>
 </html>
+
+<!--Recipes-->
+<section id="recette">
+  <div class="recette__container">
+    <div class="recette__text">
+      <h2>Quelques recettes emblématiques</h2>
+      <p>
+        Dans "The Legend of Zelda: Breath of the Wild", les recettes sont
+        essentielles pour restaurer la santé et obtenir des buffs. Chaque
+        recette est une combinaison d'ingrédients qui peut conférer des
+        avantages spécifiques comme la régénération de santé, l'augmentation de
+        la résistance au froid ou la restauration de l'endurance. La découverte
+        et l'expérimentation de nouvelles recettes font partie intégrante de
+        l'exploration et de la survie dans le vaste monde ouvert du jeu.
+      </p>
+    </div>
+    <!--Recipes1-->
+    <div class="recette__card-container">
+      <div class="recette__card">
+        <div class="recette__card--titre">
+          <h3>Assiette fruits et champi</h3>
+        </div>
+        <div class="recette__card--image">
+          <img
+            src="image/assiettefruitchampi.png"
+            alt="assiete fruit et champi" />
+        </div>
+        <div class="recette__card--text">
+          <p>
+            <em>Effet de base :</em>
+            <br />
+            restaure des cœurs rouges + effet selon l'ingrédient
+            <br />
+            <em>Ingrédients de base :</em> <br />
+            1 pomme + 1 champi
+          </p>
+        </div>
+      </div>
+
+      <!--Recipes2-->
+
+      <div class="recette__card">
+        <div class="recette__card--titre">
+          <h3>Crabe sauté</h3>
+        </div>
+        <div class="recette__card--image">
+          <img src="image/crabesale.png" alt="assiete fruit et champi" />
+        </div>
+        <div class="recette__card--text">
+          <p>
+            <em>Effet de base :</em>
+            <br />
+            restaure des cœurs + effet selon l'ingrédient rajouté
+            <br />
+            <em>Ingrédients de base :</em> <br />
+            1 crabe au choix + 1 flacon d'épices goron
+          </p>
+        </div>
+      </div>
+
+      <!--Recipes3-->
+
+      <div class="recette__card">
+        <div class="recette__card--titre">
+          <h3>Râgout de la mer</h3>
+        </div>
+        <div class="recette__card--image">
+          <img src="image/ragoutdelamer.png" alt="ragout de la mer" />
+        </div>
+        <div class="recette__card--text">
+          <p>
+            <em>Effet de base :</em>
+            <br />
+            restaure des cœurs + une jauge d'endurance jaune
+            <br />
+            <em>Ingrédients de base :</em> <br />
+            1 poisson au choix + 1 huile + 1 gousse enduro
+          </p>
+        </div>
+      </div>
+
+      <!--Recipes4-->
+
+      <div class="recette__card">
+        <div class="recette__card--titre">
+          <h3>Gâteau au monstre</h3>
+        </div>
+        <div class="recette__card--image">
+          <img src="image/1gateaudemonstre.png" alt="gateau de monstre" />
+        </div>
+        <div class="recette__card--text">
+          <p>
+            <em>Effet de base :</em>
+            <br />
+            restaure 1/4 de coeur + effet selon l'ingrédient rajouté
+            <br />
+            <em>Ingrédients de base :</em> <br />
+            1 canne à sucre + 1 blé + 1 motte de beurre + 1 extrait de monstre
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="contact">
+  <div class="contact__map--container">
+    <iframe
+      class="contact__map"
+      src="https://www.zeldadungeon.net/tears-of-the-kingdom-interactive-map/?z=3&x=214&y=-155"
+      frameborder="0"></iframe>
+
+    <!--form-->
+    <aside class="contact__box">
+      <form
+        id="form"
+        novalidate
+        class="contact__form"
+        onsubmit="handleSubmit(event)">
+        <div class="form__input">
+          <label class="form__label" for="first_name">Pseudo</label>
+          <input
+            type="text"
+            name="first_name"
+            id="first_name"
+            placeholder="Link"
+            required />
+          <div class="errorMessage"></div>
+        </div>
+        <div class="form__input">
+          <label class="form__label" for="last_name">Titre</label>
+          <input
+            type="text"
+            name="last_name"
+            id="last_name"
+            placeholder="Chevalier de Zelda
+            "
+            required />
+          <div class="errorMessage"></div>
+        </div>
+
+        <div class="form__input">
+          <label class="form__label" for="email">Adresse</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Cocorico@hyrule.totk"
+            required />
+          <div class="errorMessage"></div>
+        </div>
+
+        <div class="form__input">
+          <label class="form__label" for="message">Message</label>
+          <textarea
+            name="message"
+            placeholder="Cher Zelda..."
+            id="message"
+            rows="3"
+            required></textarea>
+          <div class="errorMessage"></div>
+        </div>
+
+        <div class="button__deco">
+          <input class="button__text" type="submit" value="Envoyer" />
+          <div class="left-decoration"></div>
+          <div class="right-decoration"></div>
+        </div>
+      </form>
+    </aside>
+  </div>
+</section>
