--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!--CSS-->
     <link rel="stylesheet" href="style/css/style.css" />
     <link rel="stylesheet" href="style/css/normalize.css" />
+
+    <!--JS-->
+    <script src="js/validator.js"></script>
   </head>
 
   <body>
