--- a/index.html
+++ b/index.html
@@ -618,7 +618,8 @@
           </a>
         </div>
         <div class="footer__contact">
-          <p>Téléphone : 514-123-4567</p><p> Mail : Ines.taborin@hyrule.totk</p>
+          <p>Téléphone : 514-123-4567</p>
+          <p>Mail : Ines.taborin@hyrule.totk</p>
         </div>
       </div>
     </footer>
